# python-project-probe

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py  logic.py
brain_games/games/: even_game.py  progression_game.py
brain_games/scripts/: brain_even.py  brain_games.py  pyproject.toml
